k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: employee-mis
   namespace: default
spec:
  selector:
    app: employee-mis
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
